<resources>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <!-- profile field -->
    <string name="hint_name">First and last name</string>
    <string name="hint_contact">Your email</string>
    <string name="hint_password">Password</string>
    <string name="missing_name">Missing name</string>
    <string name="missing_contact">Missing contact</string>
    <string name="missing_password">Missing password</string>
    <string name="login_ok">Login successful! Welcome!</string>
    <!--buttons -->
    <string name="button_save">Save</string>
    <string name="button_login" translatable="false">Login</string>
    <string name="button_register"><u>Sign up now</u></string>
    <string name="option_register">Don´t have an account yet?</string>
    <!--locations-->
    <string name="title_activity_maps">Map</string>
    <!--nav drawer-->
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="history">Fresh news</string>
    <string name="donations">Donations</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="testing">testing</string>
    <string name="current">Current activity</string>
    <!--permissions-->
    <string name="permission_rationale_location">These permissions are necessary so the application works properly.</string>
    <string name="location_permission_denied">Please try again and allow the necessary permissions. If the permissions are denied effectively you can modify the decision manually in your phone definitions.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <!-- other -->
    <string name="title_bs">Additional informational</string>
    <string name="bs">"-"</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="km_to" translatable="false"> KM </string>
    <string name="donation_1">Fire Donation</string>
    <string name="info_1_map">Company: Unicef \nLocality: Bragança \n\nCollected so far:</string>
    <string name="donation_2">Earthquake Donation</string>
    <string name="info_2_map">Company: Unicef \nLocality: Porto \n\nCollected so far:</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="btnhelp">Help</string>
    <string name="news_title_1">Incêndio em Sesimbra</string>
    <string name="news_body_1">Um incêndio que deflagrou cerca das 14.30 horas desta sexta-feira, num apartamento em Santo Tirso, levou dois menores ao hospital, por inalação de fumo.

Considerados feridos leves, os menores foram transportados para o Hospital de Santo Tirso.

Ao que o JN apurou, o incêndio, que deflagrou no sétimo e último andar de um prédio na Rua Luís de Camões, no centro da cidade, terá tido origem numa frigideira que estaria ao lume. O edifício foi evacuado por precaução.

Para o local foram mobilizados os bombeiros de Santo Tirso, Tirsenses e PSP.</string>
    <string name="news_title_2">Inundação em portimão</string>
    <string name="news_body_2">Pelo menos oito pessoas morreram na sequência de inundações registadas no leste da Austrália, segundo um novo balanço divulgado hoje pelas autoridades locais.

O anterior balanço apontava para quatro mortos.

O leste da Austrália tem sido alvo de fortes chuvas há quase uma semana, que inundaram edifícios inteiros e estradas, arrastando viaturas.

As autoridades do estado de Queensland aconselharam os residentes da capital, Brisbane, a permanecerem em casa, no momento em que a tempestade se desloca hoje para sul, onde muitas áreas residenciais estão localizadas.

Mais de 1.400 casas em Brisbane estão em risco de inundação.

A polícia continua à procura de um homem de 70 anos, que caiu ao rio Brisbane na sexta-feira.
        Após vários anos de seca e incêndios florestais potenciados pelas alterações climáticas, o leste da Austrália está a viver um verão extraordinariamente húmido devido a um fenómeno causado por uma anomalia térmica nas águas superficiais equatoriais do Oceano Pacífico.</string>
    <string name="news_title_3">Terremoto em Bragança</string>
    <string name="news_body_3">O Japão foi atingido esta quarta-feira por um terramoto de 7,3 na escala de Richter, minutos após um primeiro abalo, de menor intensidade. Não há, para já, notícia de vítimas
Um abalo de 7,3 atingiu esta quarta-feira o nordeste do Japão, mais concretamente as costas de Fukushima e Miyagi, tendo sido de imediato acionado um alerta de tsunami. As ondas geradas pelo abalo podem chegar a um metro de altura, escreve o jornal "The Japan Times".</string>
    <string name="app_name" translatable="false">APP de CM</string>

    <string name="about">About</string>
    <string name="delete_account">Delete account</string>
    <string name="change_to_dark_mode">Change to dark mode</string>
    <string name="change_app_language">Change app language</string>
    <string name="change">Changing to Portuguese</string>
    <string name="info">This application was developed by cm students.</string>
    <string name="login_not">Verify input values!</string>
    <string name="help">Click on the icons to get more information about events.</string>
    <string name="delete">Your account has been removed!</string>
    <string name="google_maps_key">AIzaSyBFOwvCkoSsTitHdY4xVFZb7T-eJ2M0mpk</string>
</resources>
