<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:openDrawer="start"
    tools:context=".DonationsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/colorMain"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLang"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="fill"
            android:padding="10dp"
            android:text="@string/change_app_language" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/change_to_dark_mode"
            android:id="@+id/txtDark"
            android:fontFamily="@font/tenor_sans"/>

        <TextView
            android:id="@+id/txtDelete"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="fill"
            android:padding="10dp"
            android:text="@string/delete_account" />

        <TextView
            android:id="@+id/txtAbout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="fill"
            android:padding="10dp"
            android:text="@string/about" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start|top"
        android:layout_margin="0dp"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/colorMain"
        app:menu="@menu/menu" />

</androidx.drawerlayout.widget.DrawerLayout>